# Telegram-X

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  CTextView.java  Dockerfile  IPv4 : 72.136.102.145  ImButton.java  MessagesController.java  Mpho freenet  PanelListAdapter.java  README.md  SECURITY.mdj  ShowPanel.java  TASKS.md  Telagramflex  Telegram X  build.gradle.kts  gradle.properties  lint.xml  local.properties.sample  new  properties.gradle.kts  quickstart.md  settings.gradle.kts  spellchecker.dic  sudo su && README.md  version.properties  ไฟล์รวม สร้างเกม ตัวตัดล็อค
.claude/: CLAUDE.md
.github/: dependabot.yml
.github/workflows/: android.yml  codeql.yml
app/: .gitignore  build.gradle.kts  google-services.json  proguard-r8-bug-android-4.x-workaround.pro  proguard-rules.pro  proguard-shrink-only.pro
app/jni/: BuildAbsl.cmake  BuildFlac.cmake  BuildJson11.cmake  BuildLibSRTP.cmake  BuildLz4.cmake  BuildOgg.cmake  BuildOpenH264.cmake  BuildOpus.cmake  BuildOpusfile.cmake  BuildRNNoise.cmake  BuildRlottie.cmake  BuildTelegramVoIP.cmake  BuildTgCalls.cmake  BuildUsrSCTP.cmake  BuildVoIP.cmake  BuildWebRTC.cmake  BuildWebp.cmake  BuildYuv.cmake  CMakeLists.txt  CMakeLists.txt1  bridge.cpp  bridge.h  emoji.cpp  emoji.h  gif.cpp  image.c  image.h  jni.c  log.cpp  log.h  tgvoip.cpp  tgvoip_config.h  utils.cpp  utils.h  video.cpp  views.c  voice.c
app/jni/cmake/: Join.cmake  Prefix.cmake  ReadVariables.cmake
app/jni/stub/: config.h
app/jni/tgvoip/: BuildAbsl.cmake  BuildJson11.cmake  BuildLibSRTP.cmake  BuildOpenH264.cmake  BuildRNNoise.cmake  BuildTelegramVoIP.cmake  BuildTgCalls.cmake  BuildUsrSCTP.cmake  BuildWebRTC.cmake  CMakeLists.txt  tgvoip.cpp
app/src/google/sinceMarshmallow/: AndroidManifest.xml
app/src/legacy/: AndroidManifest.xml
app/src/main/: AndroidManifest.xml
app/src/main/other/: phoneformat_masks.txt
app/src/main/other/themes/: Black White.tgx-theme  Blue.tgx-theme  Classic.tgx-theme  Cyan.tgx-theme  Green.tgx-theme  Night Black.tgx-theme  Night Blue.tgx-theme  Orange.tgx-theme  Pink.tgx-theme  Red.tgx-theme  White Black.tgx-theme  colors-and-properties.xml
app/src/main/res/: .gitignore
app/src/main/res/anim-v21/: swirl_draw_off_ridge_1_path_animation.xml  swirl_draw_off_ridge_2_path_animation.xml  swirl_draw_off_ridge_5_path_animation.xml  swirl_draw_off_ridge_6_path_animation.xml  swirl_draw_off_ridge_7_path_animation.xml  swirl_draw_on_ridge_1_path_animation.xml  swirl_draw_on_ridge_2_path_animation.xml  swirl_draw_on_ridge_5_path_animation.xml  swirl_draw_on_ridge_6_path_animation.xml  swirl_draw_on_ridge_7_path_animation.xml  swirl_error_state_to_fp_group_2_animation.xml  swirl_error_state_to_fp_ridge_1_path_animation.xml  swirl_error_state_to_fp_ridge_2_path_animation.xml  swirl_error_state_to_fp_ridge_5_path_animation.xml  swirl_error_state_to_fp_ridge_6_path_animation.xml  swirl_error_state_to_fp_ridge_7_path_animation.xml  swirl_error_state_to_fp_white_fingerprint_ridges_animation.xml  swirl_fp_to_error_state_fingerprint_ridges_animation.xml  swirl_fp_to_error_state_group_1_animation.xml  swirl_fp_to_error_state_group_2_animation.xml  swirl_fp_to_error_state_path_1_animation.xml  swirl_fp_to_error_state_path_2_animation.xml  swirl_fp_to_error_state_ridge_1_path_0_animation.xml  swirl_fp_to_error_state_ridge_2_path_0_animation.xml  swirl_fp_to_error_state_ridge_5_path_0_animation.xml  swirl_fp_to_error_state_ridge_6_path_0_animation.xml  swirl_fp_to_error_state_ridge_7_path_0_animation.xml
app/src/main/res/drawable/: andrejsharapov_baseline_message_check_16.xml  andrejsharapov_baseline_message_check_24.xml  app_adaptive_fg_monochrome.xml  baseline_acc_anon_little_24.xml  baseline_acc_personal_24.xml  baseline_access_time_24.xml  baseline_account_balance_wallet_20.xml  baseline_account_circle_16.xml  (+679 more)
app/src/main/res/drawable-v21/: bg_btn_header.xml  bg_btn_header_light.xml  bg_btn_pin.xml  swirl_draw_off.xml  swirl_draw_off_animation.xml  swirl_draw_on.xml  swirl_draw_on_animation.xml  swirl_error.xml  swirl_error_off.xml  swirl_error_off_animation.xml  swirl_error_on.xml  swirl_error_on_animation.xml  swirl_error_state_to_fp.xml  swirl_error_state_to_fp_animation.xml  swirl_fingerprint.xml  swirl_fp_to_error_state.xml  swirl_fp_to_error_state_animation.xml
app/src/main/res/drawable-v24/: baseline_edit_folders.xml
buildSrc/: build.gradle.kts  settings.gradle.kts
buildSrc/src/main/kotlin/: Config.kt  Utils.kt
docs/: ABOUT.md  BRANCH_RECONSTRUCTION_2026-06-13.md  CHANGELOG-2020.md  GUIDE.md  ISSUE_TEMPLATE.md  PREMIUM_PURCHASE_IMPLEMENTATION.md  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  THIRDPARTY.md
extension/bridge/: build.gradle.kts
extension/hms/: AndroidManifest.xml  agconnect-services.json  build.gradle.kts
extension/hms/src/main/: AndroidManifest.xml
extension/none/: build.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
reproducible-builds/: dependencies.txt
scripts/: build-boringssl.sh  build-ffmpeg-impl.sh  build-ffmpeg.sh  build-libvpx-impl.sh  build-libvpx.sh  build-openssl.sh  build-vpx.sh  configure-libvpx.sh  force-clean.sh  patch-androidx-media.sh  patch-exoplayer.sh  patch-opus.sh  print-env.sh  read-property.sh  reset.sh  run-docker.sh  run-ndk.sh  set-env.sh  setup-properties.sh  setup-sdk.sh  setup.sh  update-dependencies.sh  update-exoplayer.sh  version_bump.sh
scripts/for-copy/: CounterAnimator.java  ListAnimator.java  VariableFloat.java
scripts/private/: build-ffmpeg-impl.sh  build-openssl-impl.sh  build-vpx-impl.sh  patch-androidx-media-impl.sh  patch-exoplayer-impl.sh  patch-opus-impl.sh  patch-windows-impl.sh  run-cmake-impl.sh
scripts/windows/: git-info.cmd  win.vpx-Makefile.patch  win.vpx-configure.sh.patch
tgcalls/: .gitignore  build.gradle.kts  consumer-rules.pro
vkryl/android/: build.gradle.kts
vkryl/android/src/main/: AndroidManifest.xml
vkryl/core/: build.gradle.kts
vkryl/core/src/main/: AndroidManifest.xml
vkryl/td/: build.gradle.kts
vkryl/td/src/main/: AndroidManifest.xml
(+1578 files in other folders)
